 * Added `Page` methods `can_exist_under`, `can_create_at`, `can_move_to` for customising page type business rules
 * `wagtailadmin.utils.send_mail` now passes extra keyword arguments to Django's `send_mail` function (Matthew Downey)
 * `page_unpublish` signal is now fired for each page that was unpublished by a call to `PageQuerySet.unpublish()`
 * Fix: HTTP cache purge now works again on Python 2 (Mitchel Cabuloy)
 * Fix: Locked pages can no longer be unpublished (Alex Bridge)
 * Fix: Site records now implement `get_by_natural_key`
 * Fix: Creating pages at the root level (and any other instances of the base `Page` model) now properly respects the `parent_page_types` setting
 * Fix: Settings menu now opens correctly from the page editor and styleguide views
 * Fix: `subpage_types` / `parent_page_types` business rules are now enforced when moving pages
 * Fix: Multi-word tags on images and documents are now correctly preserved as a single tag (LKozlowski)

1.2 (12.11.2015)
~~~~~~~~~~~~~~~~

 * Added `wagtail.contrib.settings`, a module to allow administrators to edit site-specific settings
 * Core templatetags (pageurl, image, wagtailuserbar, etc) are now compatible with Jinja2
 * Redirects can now be created for specific sites
 * The Page.get_latest_revision_as_page method now returns the live page object if there are no draft changes to the page
 * Image and document models now provide a `search` method on their QuerySets
 * Search methods now accept an `operator` argument to determine whether multiple terms are ORed or ANDed together
 * Search methods now accept an `order_by_relevance` argument, which can be set to False to preserve the original QuerySet ordering
 * InlinePanel now accepts `max_num` and `min_num` arguments to limit the number of inline items
 * 'Add' button on inline panels is disabled when `max_num` is reached (Salvador Faria)
 * StreamField blocks now provide a `get_context` method for passing additional variables to the block template